problem/1/student/output
problem/1/student/main.c:1:1: error: unknown type name 'dd'
dd
^
problem/1/student/main.c:1:3: error: expected identifier or '('
dd
  ^
2 errors generated.
